<resources>
    <string name="app_name">Rempah Kita</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
    <string name="change_password">Change Password</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="communication">Communicate</string>
    <string name="social_account">Social Account</string>
    <string name="nav_my_application" />
    <string name="hallo">Hallo</string>
</resources>
