<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_username"
            android:title="@string/username" />
        <item
            android:id="@+id/nav_change_password"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_gender"
            android:title="@string/gender" />
        <item
            android:id="@+id/nav_date_of_birth"
            android:title="@string/date_of_birth" />
        <item
            android:id="@+id/nav_social_account"
            android:title="@string/social_account" />
    </group>

</menu>
